--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ img {
 .gallery-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-columns: repeat(auto-fit, minmax 300px, 1fr);
+    grid-template-columns: repeat(auto-fit, (minmax 300px, 1fr));
     grid-gap: 0.5rem;
 }
 
