--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,15 @@
 html {
-    font-family: 100%;
+    font-size: 100%;
     line-height: 1.5remm;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 
 body {
     margin: 0 auto;
     padding: 0;
-    min-height: 100vh;
+    min-height: 100%;
     max-width: 1400px;
 }
 
@@ -80,6 +81,7 @@ img {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-columns: repeat(auto-fit, (minmax 300px, 1fr));
     grid-gap: 0.5rem;
+    height: 100%;
 }
 
 .gallery-img {
